--- a/package.json
+++ b/package.json
@@ -83,7 +83,11 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^6.0.1",
+    "antd-mobile": "^5.8.2",
+    "axios": "^0.26.1",
+    "express": "^4.17.3",
+    "mockjs": "^1.1.0",
+    "node-sass": "^7.0.1",
     "react-router-dom": "^5.3.0"
   },
   "jest": {
