--- a/package.json
+++ b/package.json
@@ -33,14 +33,12 @@
     "jest": "^27.4.3",
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
-    "lib-flexible": "^0.3.2",
     "mini-css-extract-plugin": "^2.4.5",
     "postcss": "^8.4.4",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^6.2.1",
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^7.0.1",
-    "postcss-pxtorem": "^5.1.1",
     "prompts": "^2.4.2",
     "react": "^17.0.2",
     "react-app-polyfill": "^3.0.0",
@@ -90,6 +88,8 @@
     "axios": "^0.26.1",
     "mockjs": "^1.1.0",
     "node-sass": "^7.0.1",
+    "postcss": "^8.4.12",
+    "postcss-px-to-viewport": "^1.1.1",
     "react-dev-utils": "^12.0.0",
     "react-router-dom": "^5.3.0"
   },
